--- a/client/components/ChatList.css
+++ b/client/components/ChatList.css
@@ -98,6 +98,13 @@
     align-items: center;
     justify-content: center;
     color: var(--text-dim);
+    overflow: hidden;
+}
+
+.chat_list_avatar {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .chat_item.active .chat_icon {
